# ivorium

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: documentation.yml
doxyboot/: footer.html  header.html
doxygen/: customdoxygen.css  doxy-boot.js  footer.html  get_target_property_recursive.cmake  header.html  ivorium_doc.cmake
resources/ivorium_UI/: LumaButton.rc.py  LumaButton.xcf  LumaScroller.rc.py  LumaScroller.xcf  SimpleSplash.rc.py  SimpleSplash.xcf
resources/ivorium_UI/LumaButton/: LumaButton.rc.py
resources/ivorium_UI/LumaScroller/: LumaScroller.rc.py
resources/ivorium_UI/SimpleSplash/: SimpleSplash.rc.py
resources/ivorium_UI/fonts/: fonts.rc.py
resources/ivorium_UI/icons/: icons.rc.py
resources/ivorium_graphics/: empty.rc.py
resources/ivorium_graphics/generic/: stone.rc.py  test.rc.py  white.rc.py
resources/ivorium_graphics/shaders/: FlatShader.gl.frag  FlatShader.gl.vert  shaders.rc.py
src/: ivorium.cpp  ivorium.hpp  ivorium_config.hpp.in  mainpage.dox
src/ivorium_UI/: DefaultLumaStyles.cpp  DefaultLumaStyles.hpp  Defs.cpp  Defs.hpp  LumaButton.cpp  LumaButton.hpp  LumaFrame.cpp  LumaFrame.hpp  LumaScroller.cpp  LumaScroller.hpp  LumaSystem.cpp  LumaSystem.hpp  LumaText.cpp  LumaText.hpp  Rectangle_LumaButton.cpp  Rectangle_LumaButton.hpp  SimpleSplash.cpp  SimpleSplash.hpp  ivorium_UI.hpp
src/ivorium_core/: Defs.cpp  Defs.hpp  ivorium_core.hpp
src/ivorium_core/Attribute/: Attribute.cpp  Attribute.hpp  Attribute.inl  Field.cpp  Field.hpp  Field.inl
src/ivorium_core/Basics/: Context.cpp  Context.hpp  Context.inl  Input.cpp  Input.hpp  Interpolator.hpp  LogId.cpp  LogId.hpp  LogTrace.cpp  LogTrace.hpp  RuntimeId.cpp  RuntimeId.hpp  RuntimeId.inl  SS.cpp  SS.hpp  SrcInfo.hpp  StringIO.hpp  StringIOIndex.cpp  StringIOIndex.hpp  StringIOIndex.inl  StringIO_Table.hpp  StringIO_defs.hpp  TextOutput.cpp  TextOutput.hpp  glm_alias.hpp  hash.hpp  math.hpp  multiline_ostream.cpp  multiline_ostream.hpp  sig_div.hpp  static_warning.cpp  static_warning.hpp  utils.cpp  utils.hpp  valgrind.hpp  volatile_set.hpp  volatile_set.inl
src/ivorium_core/DebugView/: DebugView.cpp  DebugView.hpp  Ostream_TextDebugView.cpp  Ostream_TextDebugView.hpp  TableDebugView.cpp  TableDebugView.hpp  TableDebugView.inl  TextDebugView.cpp  TextDebugView.hpp  ToText_TableDebugView.cpp  ToText_TableDebugView.hpp  TreeDebugView.cpp  TreeDebugView.hpp
src/ivorium_core/Instancing/: ClientMarker.cpp  ClientMarker.hpp  ClientMarker.inl  DebugInstanceListener.cpp  DebugInstanceListener.hpp  Heap.cpp  Heap.hpp  Heap.inl  I.hpp  Instance.cpp  Instance.hpp  Instance.inl  InstanceSystem.cpp  InstanceSystem.hpp  SystemContainer.cpp  SystemContainer.hpp  SystemContainer.inl  client_ptr.hpp  client_ptr.inl  instance_ptr.cpp  instance_ptr.hpp
src/ivorium_core/Parsing/: JsonLex.cpp  JsonLex.hpp  Lex.cpp  Lex.hpp  Pratt.cpp  Pratt.hpp
src/ivorium_game/: Defs.cpp  Defs.hpp  Game.cpp  Game.hpp  ivorium_game.hpp
src/ivorium_game/Debug/: SimpleDiagnostics.cpp  SimpleDiagnostics.hpp  SimpleLogger.cpp  SimpleLogger.hpp
src/ivorium_game/Misc/: AndroidAssetResourceProvider.cpp  AndroidAssetResourceProvider.hpp  DefaultBinder.hpp  PlatformDefault_ResourceProvider.cpp  PlatformDefault_ResourceProvider.hpp  XcfInfo.cpp  XcfInfo.hpp
src/ivorium_graphics/: Defs.cpp  Defs.hpp  ivorium_graphics.hpp
src/ivorium_graphics/Animation/: AnimHeap.cpp  AnimHeap.hpp  AnimHeap.inl
src/ivorium_graphics/Elements/: Align.cpp  Align.hpp  Axis.cpp  Axis.hpp  Border.cpp  Border.hpp  Camera.cpp  Camera.hpp  Divider.cpp  Divider.hpp  Elem.cpp  Elem.hpp  ElementRenderer.cpp  ElementRenderer.hpp  ElementSystem.cpp  ElementSystem.hpp  Elements.dox  FixedOrder_Camera.cpp  FixedOrder_Camera.hpp  Image.cpp  Image.hpp  OneChildElem.hpp  OneChildElem.inl  PickableSlot.cpp  PickableSlot.hpp  Prefsize.cpp  Prefsize.hpp  Scroller.cpp  Scroller.hpp  Slot.cpp  Slot.hpp  Transform.cpp  Transform.hpp  TranslucentElem.cpp  TranslucentElem.hpp  VectorChildrenElem.hpp  VectorChildrenElem.inl
src/ivorium_graphics/FreeImage/: ImageLoader.cpp  ImageLoader.hpp  StreamTexture.cpp  StreamTexture.hpp
src/ivorium_graphics/Game/: Game.dox  GlfmWindow.cpp  GlfmWindow.hpp  GlfwWindow.cpp  GlfwWindow.hpp  TestGlfmWindow.cpp  TestGlfmWindow.hpp  Window.cpp  Window.hpp  WindowListener.hpp
src/ivorium_graphics/OpenGL/: GlError.cpp  GlError.hpp  GlMesh.cpp  GlMesh.hpp  GlProgram.cpp  GlProgram.hpp  GlTexture.cpp  GlTexture.hpp  RenderTarget.cpp  RenderTarget.hpp  gl.h
src/ivorium_graphics/Rendering/: CameraState.hpp  ColorTransform.cpp  ColorTransform.hpp  FlatShader.cpp  FlatShader.hpp  GlSystem.cpp  GlSystem.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  SquareMesh.cpp  SquareMesh.hpp  Texture.cpp  Texture.hpp
src/ivorium_graphics/Text/: Font.cpp  Font.hpp  FontMesh.cpp  FontMesh.hpp  StreamFont.cpp  StreamFont.hpp  Text.cpp  Text.hpp  TextLayout.cpp  TextLayout.hpp
src/ivorium_model/: ivorium_model.hpp
src/ivorium_model/ModelTools/: ComponentAttr.hpp  ComponentAttr.inl  GenericListener.hpp  GenericListener.inl  Link.cpp  Link.hpp  Link.inl  ModelTools.dox  Sub.hpp  Sub.inl  World.hpp  World.inl
src/ivorium_systems/: Defs.cpp  Defs.hpp  fs.hpp  ivorium_systems.hpp
src/ivorium_systems/ConfigFileSystem/: ConfigFileSystem.cpp  ConfigFileSystem.hpp
src/ivorium_systems/DVarSystem/: DVar.hpp  DVar.inl  DVarCloner.hpp  DVarCloner.inl  DVarId.cpp  DVarId.hpp  DVarListener.cpp  DVarListener.hpp  DVarManipulator.cpp  DVarManipulator.hpp  DVarManipulator.inl  DVarProperty.hpp  DVarProperty.inl  DVarSystem.cpp  DVarSystem.hpp  DVarSystem.inl  DVar_Field.hpp  DVar_Field.inl
src/ivorium_systems/DelayedLoadSystem/: DelayedLoad.cpp  DelayedLoad.hpp  DelayedLoadSystem.cpp  DelayedLoadSystem.hpp  DelayedLoader.cpp  DelayedLoader.hpp
(+119 files in other folders)
